--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,14 +15,39 @@
   width: 100%;
 }
 .navbar{
+  color: white;
+  background-color: #5c707e;
+  border: 1px solid #6f7980;
   position: fixed;
   z-index: 3;
   width: 100%;
+}
+.navbar-default .navbar-nav > li > a {
+  color: white;
+}
+.navbar-default .navbar-brand{
+  color: white;
+}
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    color: #555;
+    background-color: #ffeedd;
 }
 h1{
   color: white;
   font-size: 70px;
 }
-h3{
+.content-a, .content-b{
+  margin-top: 20px;
+}
+h3 {
   color: white;
+}
+.iconos{
+  font-size: 25px;
+}
+footer{
+  background-color: #5c707e;
+  color: white;
+  margin-top: 30px;
+  text-align: center;
 }
