--- a/assets/icon/style.css
+++ b/assets/icon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?j1b0dp');
-  src:  url('fonts/icomoon.eot?j1b0dp#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?j1b0dp') format('truetype'),
-    url('fonts/icomoon.woff?j1b0dp') format('woff'),
-    url('fonts/icomoon.svg?j1b0dp#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?du3k4r');
+  src:  url('fonts/icomoon.eot?du3k4r#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?du3k4r') format('truetype'),
+    url('fonts/icomoon.woff?du3k4r') format('woff'),
+    url('fonts/icomoon.svg?du3k4r#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,21 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-pinterest-with-circle:before {
+  content: "\e90c";
+}
+.icon-github-with-circle:before {
+  content: "\e903";
+}
+.icon-linkedin-with-circle:before {
+  content: "\e905";
+}
+.icon-facebook-with-circle:before {
+  content: "\e907";
+}
+.icon-instagram-with-circle:before {
+  content: "\e909";
+}
 .icon-brand:before {
   content: "\e900";
 }
@@ -42,7 +57,7 @@
   content: "\e902";
   color: #3b5998;
 }
-.icon-facebook:before {
+.icon-facebook2:before {
   content: "\e902";
   color: #3b5998;
 }
