--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,4 +60,59 @@
 .tamano-icon {
   font-size: 30px; }
 
+.informacion {
+  padding: 20px;
+  background-color: #d9d0cd;
+  color: #484847; }
+  .informacion hr {
+    border: 2px solid #87569c;
+    margin: 0px 0px 8px 0px;
+    width: 200px; }
+
+.flex-contenido {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .flex-contenido h4 {
+    font-weight: 700;
+    letter-spacing: 2px; }
+  .flex-contenido p {
+    text-align: center; }
+
+.flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.media-col {
+  width: 50%;
+  float: left;
+  display: inline-block; }
+
+.column-media {
+  width: 100%; }
+  @media (min-width: 789px) {
+    .column-media {
+      width: 50%;
+      float: left; } }
+
+.titulo {
+  padding: 0px 0px 0px 20px; }
+  .titulo hr {
+    border: 2px solid #87569c;
+    margin: 0px 0px 8px 0px;
+    width: 30px; }
+
+@media (min-width: 789px) {
+  .contenido {
+    display: flex; } }
+
+.descripcion {
+  background-color: #484847;
+  color: #d9d0cd;
+  padding: 20px; }
+
+.imagen img {
+  width: 100%; }
+
 /*# sourceMappingURL=style.css.map */
