--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -72,10 +72,10 @@ $large: 789px;
   display: flex;
   justify-content: space-between;
   margin-bottom: 30px;
-  width: 80px;
+  width: 100px;
 }
 .tamano-icon{
-  font-size: 30px;
+  font-size: 40px;
 }
 .informacion{
   padding: 20px;
@@ -92,6 +92,36 @@ $large: 789px;
   @media(min-width: $large){
     display: flex;
     justify-content: center;
+  }
+}
+.skills{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  .icon-skill{
+    height: 60px;
+    width: 60px;
+    margin: 10px 20px 30px 10px;
+    img{
+      width: 100%;
+    }
+    h4{
+      letter-spacing: 0px;
+      font-weight: 600;
+      font-family: 'Open Sans', sans-serif;
+      text-align: center;
+      font-size: 15px;
+      @media(min-width: $large){
+        letter-spacing: 2px;
+        font-size: 20px;
+      }
+    }
+    @media(min-width: $large){
+      height: 100px;
+      width: 100px;
+      margin: 20px 20px 60px 20px;
+
+    }
   }
 }
 .centrar-texto{
@@ -180,36 +210,22 @@ $large: 789px;
     font-size: 40px;
   }
 }
-.skills{
+.botones{
+  margin: 20px 40px 0px 0px;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  .icon-skill{
-    height: 60px;
-    width: 60px;
-    margin: 10px 20px 30px 10px;
-    img{
-      width: 100%;
-    }
-    h4{
-      letter-spacing: 0px;
-      font-weight: 600;
-      font-family: 'Open Sans', sans-serif;
-      text-align: center;
-      font-size: 15px;
-      @media(min-width: $large){
-        letter-spacing: 2px;
-        font-size: 20px;
-      }
-    }
-    @media(min-width: $large){
-      height: 100px;
-      width: 100px;
-      margin: 20px 20px 60px 20px;
-
+  width: 250px;
+  justify-content: space-between;
+  button{
+    align-items: center;
+    border: 0;
+    display: flex;
+    background-color: $morado-suave;
+    color: $gris-opaco;
+    font-weight: 600;
+    span{
+      color: $gris-opaco;
+      font-size: 22px;
+      margin-left: 5px;
     }
   }
-}
-@media (min-width:789px ) {
-
 }
