--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -105,8 +105,9 @@ $large: 789px;
   }
   .contenido-texto{
     margin-bottom: 30px;
+    font-size: 17px;
     @media(min-width: $large){
-      width: 60%;
+      width: 75%;
     }
   }
   h2{
@@ -118,14 +119,30 @@ $large: 789px;
     justify-content: center;
   }
 }
+.titulo-proyecto{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+  color:$gris-opaco;
+  hr{
+    border: 2px solid $morado-oscuro;
+    margin: 0px 0px 8px 0px;
+    width: 200px;
+  }
+}
 .skills{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   .icon-skill{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 60px;
     width: 60px;
-    margin: 10px 20px 30px 10px;
+    margin: 10px 20px 30px 20px;
     img{
       width: 100%;
     }
@@ -137,14 +154,13 @@ $large: 789px;
       font-size: 15px;
       @media(min-width: $large){
         letter-spacing: 2px;
-        font-size: 20px;
+        font-size: 17px;
       }
     }
     @media(min-width: $large){
-      height: 100px;
-      width: 100px;
+      height: 110px;
+      width: 110px;
       margin: 20px 20px 60px 20px;
-
     }
   }
 }
