--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@ $large: 789px;
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
 }
+
 .inicio{
   align-items: center;
   background-image: url(../img/laptop.jpg);
@@ -72,7 +73,7 @@ $large: 789px;
   display: flex;
   justify-content: space-between;
   margin-bottom: 30px;
-  width: 100px;
+  width: 140px;
 }
 .tamano-icon{
   font-size: 40px;
@@ -88,9 +89,26 @@ $large: 789px;
         color: $morado-oscuro;
       }
     }
+    img{
+      text-decoration:none !important;
+      color: white;
+      :hover{
+        color: $morado-oscuro;
+      }
+    }
+
   }
   :hover, :active{
     text-decoration:none !important;
+  }
+}
+.cv{
+  width: 39px;
+  a{
+    img{
+      margin-bottom: 10px;
+      width: 100%;
+    }
   }
 }
 .informacion{
